# banana-yolo11-spacemit-demo

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindVendorSpacemitOrt.cmake
cmake/toolchains/: k1x-spacemit-cross.cmake
configs/xquant/: yolov11_320.json.in
docs/: RESULTS.md  TROUBLESHOOTING.md
include/banana_demo/app/: application.h  options.h
include/banana_demo/infer/: detector.h
include/banana_demo/io/: media_source.h
include/banana_demo/render/: renderer.h
include/banana_demo/util/: logger.h  pinning.h  sha256.h
models/: README.md
output_examples/: README.md
sample_logs/: README.md
scripts/: bench_forward_only.sh  bench_full_demo.sh  build_cross.sh  common.sh  deploy_to_banana.sh  detect_camera_formats.sh  ensure_opencv.sh  export_ultralytics_onnx.sh  fetch_demo_repo.sh  fetch_models.sh  fetch_vendor_runtime.sh  import_local_k1x_scripts.sh  prepare_overlay_from_local.sh  quantize_xquant.sh  run_camera_demo.sh  run_image_demo.sh  vendor320_runtime_matrix.sh
scripts/reference/build_scripts/: 01-env.sh  03-banana-setup.sh  04-overlay-update.sh  05-build-opencv-ncnn.sh  board_info.sh  cluster_topology.sh
src/: main.cpp
src/app/: application.cpp  options.cpp
src/infer/: yolo11_detector.cpp
src/io/: media_source.cpp
src/render/: renderer.cpp
src/util/: logger.cpp  pinning.cpp  sha256.cpp
tools/: inspect_onnx_graph.py
